[ADD] fixed images padding, and collapsed table border

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,32 +16,11 @@ header{
     background-image: url(../IMG/pattern.png);
     height: 180px;
 }
-
-.The_Booleaner{
-    color: white;
-    font-weight: 100px;
-    text-shadow: 3px 2px rgba(0, 0, 0, 0.541);
-
-
-}
-
-#The{
-    padding-top: 50px;
-    padding-bottom: 0px;
-    padding-left: 50px;
-    font-size: 25px;
-    margin-bottom: 0px;
-    border-bottom: 0px;
-  
-
-}
-
-#Booleaner{
-    padding-left: 10px;
-    font-size: 50px;
-    margin-top: 0px;
-    padding-top:0px;
-    border-top: 0px;
+.booleaner{
+    width: 200px;
+    height: 200px;
+    margin-left: 20px;
+    
 }
 
 #Titolo{
@@ -60,9 +39,19 @@ header{
 }
 
 .Tim_pic{
-   margin-left: 10px;
-   margin-top: 10px;
+width: 1200px;
+height:400px ;
+margin-top: 20px;
+margin-left: 10px;
+padding: 10px 10px;
 }
+
+#TIM_2{
+    margin-left: 40px;
+    width: 580px;
+    height: 362px;
+}
+
 .credit{
     margin-top: 5px;
     margin-left: 10px;
@@ -79,12 +68,16 @@ section{
 }
 table{
     margin-left: 10px;
+    border-collapse: collapse;
+    
+
 }
 thead{
     background-color: rgb(28, 107, 107);
     color: white;
     border: 0px;
-    
+  
+
 }
 .Row{
     background-color: rgb(204, 228, 236);
